bernard-mongodeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bernard-mongodeployment
  labels:
    db: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      db: mongo
  template:
    metadata:
      labels:
        db: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
