bernard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bernard-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bernard-service
            port:
              number: 80
